--- a/app/src/main/res/layout/item_entrega.xml
+++ b/app/src/main/res/layout/item_entrega.xml
@@ -4,18 +4,17 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/cardView"
     android:layout_width="300dp"
-    android:layout_height="50dp"
+    android:layout_height="100dp"
     android:layout_marginStart="4dp"
     android:layout_marginTop="2dp"
     android:layout_marginBottom="4dp"
     app:cardCornerRadius="18dp"
-    app:cardElevation="2dp"
     android:paddingRight="2dp"
     app:cardUseCompatPadding="true">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="300dp"
-        android:layout_height="50dp"
+        android:layout_height="100dp"
         android:background="#00F6FBF7"
         android:paddingStart="14dp"
         android:paddingEnd="4dp"
@@ -42,11 +41,10 @@
             android:id="@+id/nombre_metodo_entrega"
             android:layout_width="150dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
+            android:layout_marginTop="7dp"
             android:ellipsize="end"
             android:maxLines="1"
             android:text="Combo de Limpieza"
-            android:textColor="@color/pinkColor"
 
             android:textSize="14sp"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -62,6 +60,8 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="14dp"
             android:layout_marginEnd="6dp"
+            android:layout_marginTop="10dp"
+
             android:layout_marginBottom="15dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/imagen_metodo"
@@ -73,7 +73,8 @@
                 android:layout_width="30dp"
                 android:layout_height="30dp"
                 android:layout_marginTop="10dp"
-                android:text="" />
+                android:text=""
+                android:visibility="gone" />
         </RadioGroup>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
