--- a/app/src/main/res/layout/item_entrega.xml
+++ b/app/src/main/res/layout/item_entrega.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/cardView"
@@ -9,7 +9,8 @@
     android:layout_marginTop="2dp"
     android:layout_marginBottom="4dp"
     app:cardCornerRadius="18dp"
-    android:paddingRight="2dp"
+    android:paddingRight="5dp"
+    android:paddingLeft="5dp"
     app:cardUseCompatPadding="true">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -18,6 +19,7 @@
         android:background="#00F6FBF7"
         android:paddingStart="14dp"
         android:paddingEnd="4dp"
+        android:paddingLeft="5dp"
         android:paddingBottom="15dp"
 
         >
@@ -31,6 +33,7 @@
 
             android:layout_marginTop="5dp"
             android:scaleType="centerInside"
+            android:visibility="gone"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -47,6 +50,7 @@
             android:text="Combo de Limpieza"
 
             android:textSize="14sp"
+            android:visibility="gone"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.673"
@@ -58,13 +62,12 @@
             android:id="@+id/group_entrega"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="14dp"
-            android:layout_marginEnd="6dp"
             android:layout_marginTop="10dp"
 
             android:layout_marginBottom="15dp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/imagen_metodo"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.1"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
@@ -79,4 +82,4 @@
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-</androidx.cardview.widget.CardView>
+</LinearLayout>
