--- a/app/src/main/res/layout/item_direcciones_entrega.xml
+++ b/app/src/main/res/layout/item_direcciones_entrega.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/cardView"
     android:layout_width="300dp"
-    android:layout_height="50dp"
+    android:layout_height="100dp"
     android:layout_marginStart="4dp"
     android:layout_marginTop="2dp"
     android:layout_marginBottom="4dp"
@@ -15,7 +15,7 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="300dp"
-        android:layout_height="50dp"
+        android:layout_height="100dp"
         android:background="#00F6FBF7"
         android:paddingStart="14dp"
         android:paddingEnd="4dp"
@@ -30,6 +30,7 @@
             android:layout_height="20dp"
             android:layout_marginTop="10dp"
             android:scaleType="centerInside"
+            android:visibility="gone"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/nombre_direccion_entrega"
             app:layout_constraintStart_toEndOf="@+id/group_ubi_entrega"
@@ -46,7 +47,7 @@
             android:text="Combo de Limpieza"
 
             android:textSize="13sp"
-            android:visibility="visible"
+            android:visibility="gone"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.555"
@@ -70,9 +71,10 @@
                 android:layout_width="30dp"
                 android:layout_height="30dp"
                 android:layout_marginTop="10dp"
-                android:text="" />
+                android:text=""
+                android:visibility="gone" />
         </RadioGroup>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-</androidx.cardview.widget.CardView>
+</LinearLayout>
