--- a/app/src/main/res/layout/fragment_detalle_pedido.xml
+++ b/app/src/main/res/layout/fragment_detalle_pedido.xml
@@ -346,6 +346,7 @@
                                 android:layout_height="28dp"
                                 android:layout_marginTop="28dp"
                                 android:src="@drawable/exclamacion"
+                                android:visibility="gone"
                                 app:layout_constraintEnd_toStartOf="@+id/imageView2"
                                 app:layout_constraintHorizontal_bias="0.795"
                                 app:layout_constraintStart_toEndOf="@+id/textView10"
@@ -443,7 +444,7 @@
                                 app:layout_constraintStart_toEndOf="@+id/textView15"
                                 app:layout_constraintTop_toTopOf="parent" />
 
-                            <LinearLayout
+                            <androidx.constraintlayout.widget.ConstraintLayout
                                 android:id="@+id/contenedorInstrucciones"
                                 android:layout_width="match_parent"
                                 android:layout_height="130dp"
@@ -457,50 +458,36 @@
                                 app:layout_constraintTop_toBottomOf="@+id/textView15"
                                 app:layout_constraintVertical_bias="0.6">
 
-                                <androidx.cardview.widget.CardView
-                                    android:layout_width="match_parent"
-                                    android:layout_height="50dp"
-                                    android:layout_marginLeft="30dp"
-                                    android:layout_marginRight="50dp"
-                                    app:cardCornerRadius="18dp"
 
-                                    app:cardElevation="2dp"
+                                <CheckBox
+                                    android:id="@+id/check_llamar"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
 
-                                    >
+                                    android:layout_marginBottom="40dp"
+                                    android:text="Llamar al llegar"
+                                    android:textColor="#808080"
+                                    android:textSize="13sp"
+                                    app:layout_constraintBottom_toBottomOf="parent"
+                                    app:layout_constraintEnd_toEndOf="parent"
+                                    app:layout_constraintHorizontal_bias="0.27"
+                                    app:layout_constraintStart_toStartOf="parent" />
 
-                                    <CheckBox
-                                        android:id="@+id/check_llamar"
-                                        android:layout_width="wrap_content"
-                                        android:layout_height="wrap_content"
-                                        android:layout_marginLeft="50dp"
+                                <CheckBox
+                                    android:id="@+id/check_timbre"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:text="Tocar el Timbre"
+                                    android:textColor="#808080"
+                                    android:textSize="13sp"
+                                    app:layout_constraintBottom_toBottomOf="parent"
+                                    app:layout_constraintEnd_toEndOf="parent"
+                                    app:layout_constraintHorizontal_bias="0.27"
+                                    app:layout_constraintStart_toStartOf="parent"
+                                    app:layout_constraintTop_toTopOf="parent"
+                                    app:layout_constraintVertical_bias="0.100000024" />
 
-                                        android:text="Llamar al llegar"
-
-                                        android:textSize="13sp" />
-
-                                </androidx.cardview.widget.CardView>
-
-                                <androidx.cardview.widget.CardView
-                                    android:layout_width="match_parent"
-                                    android:layout_height="50dp"
-                                    android:layout_marginLeft="30dp"
-                                    android:layout_marginTop="10dp"
-                                    android:layout_marginRight="50dp"
-                                    app:cardCornerRadius="18dp"
-
-                                    app:cardElevation="2dp">
-
-                                    <CheckBox
-                                        android:id="@+id/check_timbre"
-                                        android:layout_width="wrap_content"
-                                        android:layout_height="wrap_content"
-                                        android:layout_marginLeft="50dp"
-                                        android:text="Tocar el Timbre"
-
-                                        android:textSize="13sp" />
-
-                                </androidx.cardview.widget.CardView>
-                            </LinearLayout>
+                              </androidx.constraintlayout.widget.ConstraintLayout>
                         </androidx.constraintlayout.widget.ConstraintLayout>
                     </androidx.cardview.widget.CardView>
 
