--- a/app/src/main/res/layout/item_entrega.xml
+++ b/app/src/main/res/layout/item_entrega.xml
@@ -59,7 +59,7 @@
             app:layout_constraintVertical_bias="0.384" />
 
         <RadioGroup
-            android:id="@+id/group_entrega"
+            android:id="@+id/group_factura"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
