--- a/app/src/main/res/layout/fragment_detalle_pedido.xml
+++ b/app/src/main/res/layout/fragment_detalle_pedido.xml
@@ -31,7 +31,7 @@
                     <androidx.cardview.widget.CardView
                         android:id="@+id/cardView2"
                         android:layout_width="match_parent"
-                        android:layout_height="210dp"
+                        android:layout_height="180dp"
                         android:layout_gravity="center"
                         android:layout_marginTop="10dp"
                         app:cardCornerRadius="25dp"
@@ -61,19 +61,20 @@
                                 app:layout_constraintBottom_toBottomOf="parent"
                                 app:layout_constraintEnd_toEndOf="parent"
                                 app:layout_constraintTop_toTopOf="parent"
-                                app:layout_constraintVertical_bias="0.426" />
+                                app:layout_constraintVertical_bias="0.359" />
 
                             <TextView
                                 android:id="@+id/textView12"
                                 android:layout_width="100dp"
                                 android:layout_height="wrap_content"
-                                android:text="Descuento"
+                                android:layout_marginStart="24dp"
                                 android:layout_marginBottom="5dp"
+                                android:text="Descuento"
                                 android:textColor="@color/textColorPrimary2"
                                 android:textSize="16sp"
                                 app:layout_constraintBottom_toTopOf="@+id/textView14"
                                 app:layout_constraintEnd_toStartOf="@+id/txt_descuento_compra"
-                                app:layout_constraintHorizontal_bias="0.2"
+                                app:layout_constraintHorizontal_bias="0.0"
                                 app:layout_constraintStart_toStartOf="parent"
                                 app:layout_constraintTop_toTopOf="parent"
                                 app:layout_constraintVertical_bias="0.972" />
@@ -96,12 +97,13 @@
                                 android:id="@+id/textView11"
                                 android:layout_width="86dp"
                                 android:layout_height="30dp"
+                                android:layout_marginStart="24dp"
                                 android:text="Total"
                                 android:textColor="#00b347"
                                 android:textSize="24sp"
                                 app:layout_constraintBottom_toBottomOf="parent"
                                 app:layout_constraintEnd_toEndOf="parent"
-                                app:layout_constraintHorizontal_bias="0.104"
+                                app:layout_constraintHorizontal_bias="0.0"
                                 app:layout_constraintStart_toStartOf="parent"
                                 app:layout_constraintTop_toTopOf="parent"
                                 app:layout_constraintVertical_bias="0.899" />
@@ -126,12 +128,14 @@
                                 android:id="@+id/tt"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
+                                android:layout_marginStart="24dp"
+                                android:layout_marginBottom="5dp"
                                 android:text="Sub Total"
                                 android:textColor="@color/textColorPrimary2"
                                 android:textSize="16sp"
                                 app:layout_constraintBottom_toTopOf="@+id/textView12"
                                 app:layout_constraintEnd_toStartOf="@+id/txt_sub_total_compra"
-                                app:layout_constraintHorizontal_bias="0.169"
+                                app:layout_constraintHorizontal_bias="0.0"
                                 app:layout_constraintStart_toStartOf="parent"
                                 app:layout_constraintTop_toTopOf="parent"
                                 app:layout_constraintVertical_bias="1.0" />
@@ -140,23 +144,23 @@
                                 android:id="@+id/txt_sub_total_compra"
                                 android:layout_width="100dp"
                                 android:layout_height="wrap_content"
-                                android:textSize="16sp"
                                 android:layout_marginEnd="36dp"
                                 android:text="0"
                                 android:textAlignment="viewEnd"
                                 android:textColor="@color/textColorPrimary2"
+                                android:textSize="16sp"
                                 app:layout_constraintBottom_toTopOf="@+id/txt_descuento_compra"
                                 app:layout_constraintEnd_toEndOf="parent"
                                 app:layout_constraintTop_toTopOf="parent"
-                                app:layout_constraintVertical_bias="0.805" />
+                                app:layout_constraintVertical_bias="0.756" />
 
                             <TextView
                                 android:id="@+id/txt_delivery_compra"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_marginEnd="36dp"
+                                android:layout_marginBottom="55dp"
                                 android:text="0"
-                                android:layout_marginBottom="70dp"
                                 android:textColor="@color/textColorPrimary2"
                                 android:textSize="16sp"
                                 app:layout_constraintBottom_toBottomOf="parent"
@@ -166,12 +170,13 @@
                                 android:id="@+id/textView14"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
+                                android:layout_marginStart="24dp"
                                 android:text="Delivery"
                                 android:textColor="@color/textColorPrimary2"
                                 android:textSize="16sp"
                                 app:layout_constraintBottom_toBottomOf="parent"
                                 app:layout_constraintEnd_toStartOf="@+id/txt_delivery_compra"
-                                app:layout_constraintHorizontal_bias="0.109"
+                                app:layout_constraintHorizontal_bias="0.0"
                                 app:layout_constraintStart_toStartOf="parent"
                                 app:layout_constraintTop_toTopOf="parent"
                                 app:layout_constraintVertical_bias="0.574" />
@@ -279,6 +284,7 @@
                                 app:layout_constraintStart_toEndOf="@+id/textVie"
                                 app:layout_constraintTop_toTopOf="parent" />
                         </androidx.constraintlayout.widget.ConstraintLayout>
+
                     </androidx.cardview.widget.CardView>
 
                     <androidx.cardview.widget.CardView
@@ -312,7 +318,7 @@
                                 android:id="@+id/textView10"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:layout_marginTop="28dp"
+                                android:layout_marginTop="30dp"
                                 android:text="Dirección de entrega"
                                 app:layout_constraintEnd_toEndOf="parent"
                                 app:layout_constraintHorizontal_bias="0.346"
@@ -355,7 +361,7 @@
                             <androidx.recyclerview.widget.RecyclerView
                                 android:id="@+id/contenedorUbicacionEntrega"
                                 android:layout_width="350dp"
-                                android:layout_height="130dp"
+                                android:layout_height="120dp"
                                 android:orientation="horizontal"
                                 android:paddingLeft="20dp"
                                 android:paddingTop="10dp"
@@ -367,8 +373,29 @@
                                 app:layout_constraintTop_toBottomOf="@+id/textView10"
                                 tools:listitem="@layout/item_entrega" />
 
+                            <Button
+                                android:id="@+id/btn_agg_ubi"
+                                android:layout_width="wrap_content"
+                                android:layout_height="50dp"
+                                android:layout_gravity="center"
+                                android:elevation="10dp"
+                                android:gravity="center"
+                                android:text="Agregar nueva Ubicación"
+                                android:textAllCaps="false"
+                                android:textColor="@color/colorPrimaryDark"
+                                android:textSize="15sp"
+                                android:visibility="gone"
+                                android:layout_marginBottom="2dp"
+                                app:backgroundTint="@color/pinkColor"
+                                app:layout_constraintBottom_toBottomOf="parent"
+                                app:layout_constraintEnd_toEndOf="parent"
+                                app:layout_constraintStart_toStartOf="parent"
+                                app:layout_constraintTop_toBottomOf="@+id/contenedorUbicacionEntrega"
+                                app:shapeAppearanceOverlay="@style/Button4" />
+
 
                         </androidx.constraintlayout.widget.ConstraintLayout>
+
                     </androidx.cardview.widget.CardView>
 
                     <androidx.cardview.widget.CardView
@@ -389,7 +416,7 @@
                                 android:id="@+id/imagen3"
                                 android:layout_width="35dp"
                                 android:layout_height="35dp"
-                                android:layout_marginTop="24dp"
+                                android:layout_marginTop="20dp"
 
                                 android:src="@drawable/google_docs"
                                 app:layout_constraintEnd_toStartOf="@+id/textView15"
@@ -530,7 +557,6 @@ android:layout_marginTop="10dp"
                                 app:layout_constraintBottom_toBottomOf="parent"
                                 app:layout_constraintEnd_toEndOf="parent"
                                 app:layout_constraintStart_toStartOf="parent"
-                                app:layout_constraintTop_toBottomOf="@+id/textVie"
                                 tools:listitem="@layout/item_entrega" />
 
                             <ImageView
@@ -550,21 +576,18 @@ android:layout_marginTop="10dp"
                                 android:layout_width="40dp"
                                 android:layout_height="40dp"
                                 android:layout_marginStart="36dp"
-                                android:layout_marginEnd="8dp"
+                                android:layout_marginTop="20dp"
                                 android:src="@drawable/ruc"
-                                app:layout_constraintBottom_toBottomOf="parent"
-                                app:layout_constraintEnd_toStartOf="@+id/textView6"
                                 app:layout_constraintStart_toStartOf="parent"
-                                app:layout_constraintTop_toTopOf="parent"
-                                app:layout_constraintVertical_bias="0.487" />
+                                app:layout_constraintTop_toTopOf="parent" />
 
                             <TextView
                                 android:id="@+id/textView62"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_marginStart="8dp"
+                                android:layout_marginTop="30dp"
                                 android:text="Datos de Facturación"
-                                app:layout_constraintBottom_toBottomOf="parent"
                                 app:layout_constraintEnd_toEndOf="parent"
                                 app:layout_constraintHorizontal_bias="0.35"
                                 app:layout_constraintStart_toStartOf="parent"
@@ -574,9 +597,9 @@ android:layout_marginTop="10dp"
                                 android:id="@+id/imageView4"
                                 android:layout_width="25dp"
                                 android:layout_height="25dp"
+                                android:layout_marginTop="30dp"
                                 android:layout_marginRight="20dp"
                                 android:src="@drawable/flecha_hacia_abajo"
-                                app:layout_constraintBottom_toBottomOf="parent"
                                 app:layout_constraintEnd_toEndOf="parent"
                                 app:layout_constraintTop_toTopOf="parent" />
 
@@ -586,7 +609,6 @@ android:layout_marginTop="10dp"
                                 android:layout_height="28dp"
                                 android:src="@drawable/comprobado_adobe_express"
                                 android:visibility="gone"
-                                app:layout_constraintBottom_toBottomOf="parent"
                                 app:layout_constraintEnd_toStartOf="@+id/imageView4"
                                 app:layout_constraintHorizontal_bias="0.831"
                                 app:layout_constraintTop_toTopOf="parent" />
@@ -676,7 +698,7 @@ android:layout_marginTop="10dp"
                     android:layout_marginBottom="10dp"
                     android:text="Guardar"
                     android:textAllCaps="false"
-                    android:textColor="@color/textColor"
+                    android:textColor="@color/colorPrimaryDark"
                     android:textSize="17sp"
                     app:backgroundTint="@color/pinkColor"
                     app:shapeAppearanceOverlay="@style/Button4" />
