--- a/app/src/main/res/layout/item_direcciones_entrega.xml
+++ b/app/src/main/res/layout/item_direcciones_entrega.xml
@@ -59,10 +59,10 @@
             android:id="@+id/group_ubi_entrega"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="14dp"
-            android:layout_marginEnd="6dp"
 
             app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
