--- a/app/src/main/res/layout/item_metodopago.xml
+++ b/app/src/main/res/layout/item_metodopago.xml
@@ -41,15 +41,19 @@
                 android:layout_height="30dp"
                 android:layout_marginTop="10dp"
                 android:text="POS"
-                android:visibility="visible" />
+                android:visibility="visible"
+                android:textColor="#808080"
+                android:textSize="12sp"/>
 
             <RadioButton
                 android:id="@+id/radio_efectivo"
                 android:layout_width="wrap_content"
                 android:layout_height="30dp"
+                android:textColor="#808080"
                 android:layout_marginTop="10dp"
                 android:text="Efectivo"
-                android:visibility="visible" />
+                android:visibility="visible"
+                android:textSize="12sp"/>
 
             <RadioButton
                 android:id="@+id/radio_online"
@@ -57,7 +61,9 @@
                 android:layout_height="30dp"
                 android:layout_marginTop="10dp"
                 android:text="Pago Online"
-                android:visibility="visible" />
+                android:visibility="visible"
+                android:textColor="#808080"
+                android:textSize="12sp"/>
         </RadioGroup>
 
 
