--- a/app/src/main/res/layout/fragment_detalle_pedido.xml
+++ b/app/src/main/res/layout/fragment_detalle_pedido.xml
@@ -107,7 +107,7 @@
                                 app:layout_constraintHorizontal_bias="0.0"
                                 app:layout_constraintStart_toStartOf="parent"
                                 app:layout_constraintTop_toTopOf="parent"
-                                app:layout_constraintVertical_bias="0.899" />
+                                app:layout_constraintVertical_bias="1.0" />
 
                             <TextView
                                 android:id="@+id/txt_total_compra"
@@ -123,7 +123,7 @@
                                 app:layout_constraintHorizontal_bias="0.87"
                                 app:layout_constraintStart_toEndOf="@+id/textView11"
                                 app:layout_constraintTop_toTopOf="parent"
-                                app:layout_constraintVertical_bias="0.893" />
+                                app:layout_constraintVertical_bias="1.0" />
 
                             <TextView
                                 android:id="@+id/tt"
@@ -729,6 +729,92 @@
                         </androidx.constraintlayout.widget.ConstraintLayout>
                     </androidx.cardview.widget.CardView>
 
+
+
+
+                    <androidx.cardview.widget.CardView
+                        android:id="@+id/cardView6"
+                        android:layout_width="match_parent"
+                        android:layout_height="110dp"
+                        android:layout_gravity="center"
+                        app:cardCornerRadius="25dp"
+                        app:cardElevation="1dp"
+                        app:cardUseCompatPadding="true">
+
+                        <androidx.constraintlayout.widget.ConstraintLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent">
+
+                            <androidx.recyclerview.widget.RecyclerView
+                                android:id="@+id/contenedorMetodoPagoOnline"
+                                android:layout_width="300dp"
+                                android:layout_height="122dp"
+                                android:orientation="horizontal"
+                                android:paddingLeft="20dp"
+                                android:paddingTop="10dp"
+                                android:paddingRight="30dp"
+                                android:visibility="gone"
+                                app:layout_constraintBottom_toBottomOf="parent"
+                                app:layout_constraintEnd_toEndOf="parent"
+                                app:layout_constraintStart_toStartOf="parent"
+                                app:layout_constraintTop_toBottomOf="@+id/textView652"
+                                app:layout_constraintVertical_bias="0.100000024"
+                                tools:listitem="@layout/item_datosfactura" />
+
+                            <ImageView
+                                android:id="@+id/imageView92"
+                                android:layout_width="40dp"
+                                android:layout_height="40dp"
+                                android:layout_marginStart="24dp"
+                                android:layout_marginTop="20dp"
+                                android:src="@drawable/pago_con_tarjeta"
+                                app:layout_constraintStart_toStartOf="parent"
+                                app:layout_constraintTop_toTopOf="parent" />
+
+                            <TextView
+                                android:id="@+id/textView652"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginTop="30dp"
+                                android:text="Pago Online"
+                                app:layout_constraintEnd_toEndOf="parent"
+                                app:layout_constraintHorizontal_bias="0.334"
+                                app:layout_constraintStart_toStartOf="parent"
+                                app:layout_constraintTop_toTopOf="parent" />
+
+                            <ImageView
+                                android:id="@+id/imageView6"
+                                android:layout_width="25dp"
+                                android:layout_height="25dp"
+                                android:layout_marginTop="30dp"
+                                android:layout_marginRight="20dp"
+                                android:src="@drawable/flecha_hacia_abajo"
+                                app:layout_constraintEnd_toEndOf="parent"
+                                app:layout_constraintTop_toTopOf="parent" />
+
+                            <ImageView
+                                android:id="@+id/chec6_bien"
+                                android:layout_width="28dp"
+                                android:layout_height="28dp"
+                                android:layout_marginTop="32dp"
+                                android:src="@drawable/exclamacion"
+                                android:visibility="gone"
+                                app:layout_constraintEnd_toStartOf="@+id/imageView6"
+                                app:layout_constraintHorizontal_bias="0.805"
+                                app:layout_constraintStart_toEndOf="@+id/textView652"
+                                app:layout_constraintTop_toTopOf="parent" />
+
+                            <ImageView
+                                android:id="@+id/check6"
+                                android:layout_width="35dp"
+                                android:layout_height="35dp"
+                                android:src="@drawable/comprobado_adobe_express"
+                                android:visibility="gone"
+                                app:layout_constraintBottom_toBottomOf="parent"
+                                app:layout_constraintEnd_toStartOf="@+id/imageView6"
+                                app:layout_constraintTop_toTopOf="parent" />
+                        </androidx.constraintlayout.widget.ConstraintLayout>
+                    </androidx.cardview.widget.CardView>
 
                 </LinearLayout>
                 <Button
